Adds HttpSender to aid proper handling of HttpEndpointSupplier (#253)
Signed-off-by: Adrian Cole <adrian@tetrate.io>